- Removed the home link and dark mode toggle as adviced by Rusky also i dont like the orange section text its not formatted properly someone please fix it

--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,8 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     transition: background-color 0.3s, color 0.3s;
-}
-
-body.light-mode {
-    background-color: #f5f5f5;
-    color: #333;
+    background-color: #121212;
+    color: #f5f5f5;
 }
 
 body.dark-mode {
@@ -157,6 +154,7 @@ section {
 
 h2, h3 {
     color: #ff6347;
+    font-weight: 5px;
 }
 
 ul {
@@ -218,46 +216,3 @@ hr {
     font-family: "Font Awesome 6 Brands";
     font-weight: 400;
 }
-
-.contact {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    margin-top: 2rem;
-}
-
-.contact > * + * {
-    margin-top: 1rem;
-}
-
-@media (min-width: 768px) {
-    .contact {
-        flex-direction: row;
-    }
-
-    .contact > * + * {
-        margin-top: 0;
-        margin-left: 1rem;
-    }
-}
-
-.typing {
-        border-right: .15em solid #000;
-        white-space: nowrap;
-        overflow: hidden;
-        animation: typing 3.5s steps(40, end), blink-caret .75s step-end infinite;
-        color: #29c629;
-    }
-
-    @keyframes typing {
-        from { width: 0; }
-        to { width: 100%; }
-        from { height: 100%; }
-        to { height: 100%;}
-    }
-
-    @keyframes blink-caret {
-        from, to { border-color: transparent; }
-        50% { border-color: black; }
-    }
